Added Quartz Scheduler

--- a/src/EcoRecruit.Infrastructure/EcoRecruit.Infrastructure.csproj
+++ b/src/EcoRecruit.Infrastructure/EcoRecruit.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EcoRecruit.Core\EcoRecruit.Core.csproj" />
+  </ItemGroup>
+
 </Project>
