--- a/src/EcoRecruit.Core/EcoRecruit.Core.csproj
+++ b/src/EcoRecruit.Core/EcoRecruit.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <VersionPrefix>1.0.0.0</VersionPrefix>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,5 +18,6 @@
     <PackageReference Include="Abp.AutoMapper" Version="9.1.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="9.1.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="4.1.0" />
+    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
   </ItemGroup>
 </Project>
