--- a/src/EcoRecruit.Web.Host/EcoRecruit.Web.Host.csproj
+++ b/src/EcoRecruit.Web.Host/EcoRecruit.Web.Host.csproj
@@ -29,6 +29,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EcoRecruit.Core\EcoRecruit.Core.csproj" />
     <ProjectReference Include="..\EcoRecruit.Web.Core\EcoRecruit.Web.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
