--- a/src/EcoRecruit.Core/EcoRecruit.Core.csproj
+++ b/src/EcoRecruit.Core/EcoRecruit.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Abp.AutoMapper" Version="9.1.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="9.1.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="4.1.0" />
+    <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
   </ItemGroup>
 </Project>
