--- a/src/EcoRecruit.Web.Host/appsettings.Development.json
+++ b/src/EcoRecruit.Web.Host/appsettings.Development.json
@@ -24,5 +24,13 @@
   },
   "Swagger": {
     "ShowSummaries": false
+  },
+  "MailSettings": {
+    "Server": "mail.teamoption.ng",
+    "Port": 485,
+    "SenderName": "ECOWAS/CEDEAO Recruitment",
+    "SenderEmail": "ecowas@teamoption.ng",
+    "UserName": "ecowas@teamoption.ng",
+    "Password": "P@ssw0rd123"
   }
 }
