--- a/src/EcoRecruit.Web.Host/appsettings.Staging.json
+++ b/src/EcoRecruit.Web.Host/appsettings.Staging.json
@@ -13,6 +13,14 @@
       "SecurityKey": "EcoRecruit_09128734765665675478438932902100000000000000000000000000",
       "Issuer": "EcoRecruit",
       "Audience": "EcoRecruit"
+    },
+    "MailSettings": {
+      "Server": "mail.teamoption.ng",
+      "Port": 485,
+      "SenderName": "ECOWAS/CEDEAO Recruitment",
+      "SenderEmail": "ecowas@teamoption.ng",
+      "UserName": "ecowas@teamoption.ng",
+      "Password": "P@ssw0rd123"
     }
   }
 }
